--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,52 @@
 <html>
   <head>
     <title><%= title %></title>
+
     <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <main>
+      <div class="container">
+        <div class="row">
+          <% values.forEach(function(device) { %>
+
+            <div class="col-sm-4">
+              <div class="card">
+                  <div class="card-body">
+                      <div class="container">
+                          <div class="row">
+                              <div class="col-md-auto">
+                              <img src="/public/img/robot_icon.png" alt="robot icon" id="device_preview_icon" style="height: 44px"/>
+                          </div>
+                          <div class="col-sm">
+                              <% if (device.connected){ %>
+                              <img src="/public/img/robot_icon_connected.png" alt="robot icon" style="height: 44px" />
+                              <% } else{ %>  
+                              <img src="/public/img/robot_icon_disconnected.png" alt="robot icon" style="height: 44px" />
+                              <% } %>
+                          </div>
+                          </div>
+                          <div class="row">
+                              <p class="card-text"><b><%= device.deviceName %> <br> </b>
+                                  <span style="font-size: 0.618em">Last seen: <%= device.lastSeen %></span>
+                              </p> 
+                              <a class="stretched-link" href="/device?device_id=<%= device.deviceUuid %>"
+                                  style="color: white;">Go to device</a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <% }); %>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
