--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,34 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color:#FBFCFD;
 }
 
-a {
-  color: #00B7FF;
+.card {
+  background-color: white !important;
+  border:none;
+  margin-bottom:30px; 
+  border-radius: 15px; 
+  filter: drop-shadow(0px 0px 23.304px rgba(195, 191, 218, 0.22));
+}
+
+.card-deck {
+  margin-bottom: 30px;
+}
+
+table {
+  font-size: 80%;
+  color: #a4a7ac;
+}
+
+th {
+  color: #000000;
+}
+
+#nav_bar_horizontal {
+  margin-top:30px; 
+  margin-bottom:30px; 
+}
+
+#nav {
+  margin-top:30px; 
+  margin-bottom:30px; 
 }
