--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,51 +3,107 @@
   <head>
     <title><%= title %></title>
 
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/fastbootstrap@2.2.0/dist/css/fastbootstrap.min.css" rel="stylesheet" integrity="sha256-V6lu+OdYNKTKTsVFBuQsyIlDiRWiOmtC8VQ8Lzdm2i4=" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <link rel='stylesheet' href='/public/stylesheets/style.css' />
   </head>
   <body>
-    <main>
-      <div class="container">
-        <div class="row">
-          <% values.forEach(function(device) { %>
 
-            <div class="col-sm-4">
-              <div class="card">
-                  <div class="card-body">
-                      <div class="container">
-                          <div class="row">
-                              <div class="col-md-auto">
-                              <img src="/public/img/robot_icon.png" alt="robot icon" id="device_preview_icon" style="height: 44px"/>
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-1">
+              <div id="nav">
+                  <ul class="nav flex-column">
+                      <li class="nav-item mx-auto" style="margin-bottom: 30px;">
+                          <a class="navbar-brand" href="https://www.betterask.erni/">
+                              <img src="/public/img/ERNI_Emblem.png" alt="www.betterask.erni" title="www.betterask.erni"  width="43.8" height="48" />
+                          </a>
+                      </li>
+                      <li class="nav-item mx-auto" style="margin-bottom: 30px;">
+                          <a class="navbar-brand" href="/">
+                              <img src="/public/img/home.png" alt="Home" title="Home"  width="32" />
+                          </a>
+                      </li>
+                      <li class="nav-item mx-auto" style="margin-bottom: 30px;">
+                          <a class="navbar-brand" href="https://app.torizon.io/#/fleets">
+                              <img src="/public/img/connect_icon.png" alt="Fleets" title="Fleets" width="43.8" height="48" />
+                          </a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+          <div class="col-sm-11">
+              <div id="nav_bar_horizontal">
+                  <div class="container">
+                      <div class="row">
+                          <div class="col">
+
                           </div>
-                          <div class="col-sm">
-                              <% if (device.connected){ %>
-                              <img src="/public/img/robot_icon_connected.png" alt="robot icon" style="height: 44px" />
-                              <% } else{ %>  
-                              <img src="/public/img/robot_icon_disconnected.png" alt="robot icon" style="height: 44px" />
-                              <% } %>
-                          </div>
-                          </div>
-                          <div class="row">
-                              <p class="card-text"><b><%= device.deviceName %> <br> </b>
-                                  <span style="font-size: 0.618em">Last seen: <%= device.lastSeen %></span>
-                              </p> 
-                              <a class="stretched-link" href="/device?device_id=<%= device.deviceUuid %>"
-                                  style="color: white;">Go to device</a>
+                          <div class="col">
+                              <ul class="nav justify-content-end">
+                                  <li class="nav-item">
+                                      <a class="navbar-brand" href="https://app.torizon.io/#/">
+                                          <img src="/public/img/user.png" alt="user account" width="43.8"
+                                              height="48" />
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a class="navbar-brand" href="#">
+                                          <img src="/public/img/notifications.png" alt="notifications"
+                                              title="Register for notifications dummy" width="43.8" height="48" />
+                                      </a>
+                                  </li>
+                              </ul>
                           </div>
                       </div>
                   </div>
               </div>
-          </div>
+              <div id="application_data">
+                  <div class="container">
+                      <div class="row">
+        <% values.forEach(function(device) { %>
 
-          <% }); %>
+          <div class="col-sm-4">
+            <div class="card">
+                <div class="card-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-auto">
+                            <img src="/public/img/robot_icon.png" alt="robot icon" id="device_preview_icon" style="height: 44px"/>
+                        </div>
+                        <div class="col-sm">
+                            <% if (device.connected){ %>
+                            <img src="/public/img/robot_icon_connected.png" alt="robot icon" style="height: 44px" />
+                            <% } else{ %>  
+                            <img src="/public/img/robot_icon_disconnected.png" alt="robot icon" style="height: 44px" />
+                            <% } %>
+                        </div>
+                        </div>
+                        <div class="row">
+                            <p class="card-text"><b><%= device.deviceName %> <br> </b>
+                                <span style="font-size: 0.618em">Last seen: <%= device.lastSeen %></span>
+                            </p> 
+                            <a class="stretched-link" href="/device?device_id=<%= device.deviceUuid %>"
+                                style="color: white;">Go to device</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <% }); %>
+                      </div>
+                  </div>
+              </div>
+          </div>
       </div>
-    </main>
-  </body>
+  </div>
+</body>
 </html>
